syntax = "proto3";

package utranscalc;

option java_package = "com.github.utransnet.utranscalc";
option java_outer_classname = "Protos";
option csharp_namespace = "uTrans.Proto";



enum Type {
    unknown = 0;
    listPresets = 1;
    getPresetMaterials = 2;
    listBaseObjects = 3;
    getRequiredMaterialsForBaseObject = 4;
    listMaterials = 5;
}

enum Units {
    usd = 0;
    kg = 1;
    t = 2;
    m = 3;
    km = 4;
    cnt = 5;
}

message Envelope {
    Type type = 1;

    repeated Preset presets = 2;
    repeated PresetMaterial preset_materials = 3;
    repeated BaseObject base_objects = 4;
    repeated Material materials = 5;
    repeated BaseObjectMaterial required_materials = 6;
}

message Request {
    Type type = 1;
    OptionalId preset_id = 2;

    message OptionalId {
        bool is_set = 1;
        int64 id = 2;
    }
}

message Preset {
    int64 id = 1;
    string name = 2;
}

message PresetMaterial {
    int64 material_id = 1;
    int32 price = 2;
}

message Material {
    int64 id = 1;
    string name = 2;
    Units unit = 3;
    bool income = 4;
}

message BaseObject {
    int64 id = 1;
    string name = 2;
    int32 type = 3;
    int32 minSize = 4;
    int32 maxSize = 5;
}

message BaseObjectMaterial {
    int64 material_id = 1;
    int32 amount = 2;
    bool on_exploitation = 3;
    bool user_editable = 4;
    int32 group_number = 5;
    int32 number_in_group = 6;
}

message Error {
    int64 id = 1;
    string message = 2;
}